added nav banner and product section and working on cart section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,165 @@
     <!-- tailwindcss cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- custom css  -->
-     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="work-sans-font">
-<h1 class="font-">Hello⭐️</h1>
+<body class="work-sans-font bg-[#F8F8F8]">
+    <header class="bg-gradient-to-b from-white to-pink-100">
+        <nav class="flex justify-center items-center gap-2 shadow-sm py-4">
+            <div class="w-12"> <img src="./assets/logo.png" alt="logo"></div>
+            <div class="">
+                <h3 class="text-[#E71580] text-5xl">Deshi <span class="font-bold">Deals</span></h3>
+                <p class="text-[#797075]">Cheap Price , Best Quality</p>
+            </div>
+        </nav>
+        <section class="banner flex flex-col justify-center items-center relative pt-40">
+            <h1 class="text-6xl font-bold">Purchase TK 200 or above & get
+            </h1>
+            <span class="text-[#E71580] text-center text-6xl font-bold">20% off</span>
+            <div class="flex mt-5 items-center gap-4">
+                <p class="px-10">Use Promo Code</p>
+                <button class="btn btn-secondary px-10">SELL200</button>
+            </div>
+            <div class="relative -bottom-18 w-[710px]"><img class="w-full" src="./assets/hero-bg.png" alt=""></div>
+        </section>
+    </header>
+    <main class="w-11/12 mx-auto grid grid-cols-12 gap-32 mt-52 ">
+        <section class="product col-span-9 ">
+            <section class="kitchenware mt-16">
+                <h2 class="text-4xl font-semibold pb-8">Kitchenware</h2>
+                <div class="card-continer grid grid-cols-3 gap-6">
+                    <!-- card 1 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/kitchen-1.png" alt="spun" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Wood Spun</h2>
+                            <p class="text-xl text-gray-500"><span>150</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/kitchen-2.png" alt="spun" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Wood Cattel</h2>
+                            <p class="text-xl text-gray-500"><span>750</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/kitchen-3.png" alt="spun" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Stil Bow</h2>
+                            <p class="text-xl text-gray-500"><span>899</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="sportswear mt-16">
+                <h2 class="text-4xl font-semibold pb-8">Sportswear</h2>
+                <div class="card-continer grid grid-cols-3 gap-6">
+                    <!-- card 1 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/sports-1.png" alt="cap" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Sports Back Cap</h2>
+                            <p class="text-xl text-gray-500"><span>250.00</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/sports-2.png" alt="jersey set" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Full Jersey Set</h2>
+                            <p class="text-xl text-gray-500"><span>750.00</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/sports-3.png" alt="shoe" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Sports cates</h2>
+                            <p class="text-xl text-gray-500"><span>1899.00</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="furniture mt-16">
+                <h2 class="text-4xl font-semibold pb-8">Furniture</h2>
+                <div class="card-continer grid grid-cols-3 gap-6">
+                    <!-- card 1 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/furniture-1.png" alt="Chire" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Single Relax Chair</h2>
+                            <p class="text-xl text-gray-500"><span>1150.00</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/furniture-2.png" alt="Small Chire" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Children Play </h2>
+                            <p class="text-xl text-gray-500"><span>750.00</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="card bg-base-100  shadow-sm">
+                        <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
+                            <img src="./assets/furniture-3.png" alt="spun" />
+                        </figure>
+                        <div class="card-body items-center text-center p-0">
+                            <div class="text-center mt-2 text-2xl"> ⭐️ ⭐️ ⭐️ ⭐️</div>
+                            <h2 class="card-title text-2xl">Flexible Sofa</h2>
+                            <p class="text-xl text-gray-500"><span>8899.00</span>TK</p>
+                            <button class="btn w-full bg-[#E71580] text-white">Add To Cart</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <aside class="cart col-span-3 border-2">
+            <div class="p-5">
+                <h2 class="pb-2">Have coupon?</h2>
+            <div class="coupon join ">
+                <input class="input join-item" placeholder="Coupon code" />
+                <button class="btn join-item rounded-r-lg bg-[#E71580] text-white">Subscribe</button>
+            </div>
+            </div>
+        </aside>
+    </main>
 </body>
 
 </html>
