--- a/index.html
+++ b/index.html
@@ -160,13 +160,30 @@
                 </div>
             </section>
         </section>
-        <aside class="cart col-span-3 border-2">
-            <div class="p-5">
+        <aside class="cart-section col-span-3 ">
+            <div class="coupon bg-white rounded-lg p-5 mt-32">
                 <h2 class="pb-2">Have coupon?</h2>
-            <div class="coupon join ">
-                <input class="input join-item" placeholder="Coupon code" />
-                <button class="btn join-item rounded-r-lg bg-[#E71580] text-white">Subscribe</button>
+                <div class=" join ">
+                    <input class="input join-item" placeholder="Coupon code" />
+                    <button class="btn join-item rounded-r-lg bg-[#E71580] text-white">Apply</button>
+                </div>
             </div>
+            <div id="cart-container" class="mt-12 bg-white py-8 px-5 rounded-lg">
+                <div class="cart flex justify-between items-center p-3 mb-3 rounded-lg bg-gray-200">
+                    <div class="w-12"><img src="./assets/kitchen-1.png" alt=""></div>
+                    <div>
+                        <h4 id="cart-title" class="text-xl font-semibold">Wood Spun</h4>
+                        <p class="text-gray-500"><span id="cart-price">150.00</span>TK</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="payment mt-3 space-y-3">
+                    <p class="text-xl">Total Price: <span class="text-gray-500">257.00</span><span class="text-gray-500">TK</span></p>
+                    <p class="text-xl">Discount: <span class="text-gray-500">257.00</span><span class="text-gray-500">TK</span></p>
+                    <p class="text-xl">Total: <span class="text-gray-500">257.00</span><span class="text-gray-500">TK</span></p> 
+                    <hr>
+                    <button class="btn w-full bg-[#E71580] text-white">Make Purchase</button>
+                </div>
             </div>
         </aside>
     </main>
