--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </section>
     </header>
     <main class="w-11/12 mx-auto grid grid-cols-12 gap-32 mt-52 ">
-        <section class="product col-span-9 ">
+        <section id="product" class="product col-span-9 ">
             <section class="kitchenware mt-16">
                 <h2 class="text-4xl font-semibold pb-8">Kitchenware</h2>
-                <div class="card-continer grid grid-cols-3 gap-6">
+                <div id="card-continer" class="card-continer grid grid-cols-3 gap-6">
                     <!-- card 1 -->
                     <div class="card bg-base-100  shadow-sm">
                         <figure class="px-10 pt-10 bg-[#F8F8F8] mx-5 mt-5 pb-8 rounded-xl">
@@ -164,29 +164,34 @@
             <div class="coupon bg-white rounded-lg p-5 mt-32">
                 <h2 class="pb-2">Have coupon?</h2>
                 <div class=" join ">
-                    <input class="input join-item" placeholder="Coupon code" />
-                    <button class="btn join-item rounded-r-lg bg-[#E71580] text-white">Apply</button>
+                    <input id="coupon-input" class="input join-item" placeholder="Coupon code" />
+                    <button id="coupon-btn" class="btn join-item rounded-r-lg bg-[#E71580] text-white">Apply</button>
                 </div>
             </div>
-            <div id="cart-container" class="mt-12 bg-white py-8 px-5 rounded-lg">
-                <div class="cart flex justify-between items-center p-3 mb-3 rounded-lg bg-gray-200">
-                    <div class="w-12"><img src="./assets/kitchen-1.png" alt=""></div>
-                    <div>
-                        <h4 id="cart-title" class="text-xl font-semibold">Wood Spun</h4>
-                        <p class="text-gray-500"><span id="cart-price">150.00</span>TK</p>
-                    </div>
-                </div>
+            <div class="bg-white">
+                <div id="cart-container" class="mt-12 bg-white py-8 px-5 rounded-lg">
+
+
+            </div>
+            <div>
+                <hr>
+                <button id="delete-btn" class="btn w-full bg-[#E71580] text-white my-2">Delete All</button>
                 <hr>
                 <div class="payment mt-3 space-y-3">
-                    <p class="text-xl">Total Price: <span class="text-gray-500">257.00</span><span class="text-gray-500">TK</span></p>
-                    <p class="text-xl">Discount: <span class="text-gray-500">257.00</span><span class="text-gray-500">TK</span></p>
-                    <p class="text-xl">Total: <span class="text-gray-500">257.00</span><span class="text-gray-500">TK</span></p> 
+                    <p class="text-xl">Total Price: <span id="total-price" class="text-gray-500">0</span><span
+                            class="text-gray-500">TK</span></p>
+                    <p class="text-xl">Discount: <span id="discount" class="text-gray-500">0</span><span
+                            class="text-gray-500">TK</span></p>
+                    <p class="text-xl">Total: <span id="total" class="text-gray-500">0</span><span
+                            class="text-gray-500">TK</span></p>
                     <hr>
                     <button class="btn w-full bg-[#E71580] text-white">Make Purchase</button>
                 </div>
             </div>
+            </div>
         </aside>
     </main>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
