some ajustment in paymet section

--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 
 
             </div>
-            <div>
+            <div class="payment">
                 <hr>
                 <button id="delete-btn" class="btn w-full bg-[#E71580] text-white my-2">Delete All</button>
                 <hr>
-                <div class="payment mt-3 space-y-3">
+                <div class=" mt-3 space-y-3 px-3">
                     <p class="text-xl">Total Price: <span id="total-price" class="text-gray-500">0</span><span
                             class="text-gray-500">TK</span></p>
                     <p class="text-xl">Discount: <span id="discount" class="text-gray-500">0</span><span
@@ -185,8 +185,8 @@
                     <p class="text-xl">Total: <span id="total" class="text-gray-500">0</span><span
                             class="text-gray-500">TK</span></p>
                     <hr>
-                    <button class="btn w-full bg-[#E71580] text-white">Make Purchase</button>
                 </div>
+                <button class="btn w-full bg-[#E71580] text-white mt-2">Make Purchase</button>
             </div>
             </div>
         </aside>
